--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+node_modules
 /frontend/node_modules
 /frontend/.pnp
 /frontend/.pnp.js
@@ -16,6 +17,7 @@
 /backend/build
 
 # misc
+.env
 /frontend/.DS_Store
 /frontend/.env.local
 /frontend/.env.development.local
