--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Petar Karoglan",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
